# advent_of_code_2021_rust

1_1/: Cargo.toml
1_1/src/: main.rs
1_2/: example_input.txt
day_1_part_2/: Cargo.toml
day_1_part_2/src/: main.rs
day_2_part_1/: Cargo.toml
day_2_part_1/src/: main.rs
day_2_part_2/: Cargo.toml  example_data.txt
day_2_part_2/src/: main.rs
day_3_part_1/: Cargo.toml  example_data.txt
day_3_part_1/src/: main.rs
