[package]
name = "advent_of_code_2021_1_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1


[dependencies]
clap = { version = "3.0.6", features = ["derive"] }
